# oi

./: -  2  A.cpp  C.cpp  CMakeLists.txt  F  F.cpp  G.cpp  LICENSE  README.md  Z.in  a.in  a.out  a1.ans  a1.in  a2.ans  a20.ans  a20.in  a3.ans  a3.in  a4.ans  a4.in  a5.ans  a5.in  b1.in  b10.ans  b10.in  b11.ans  b11.in  b12.ans  b12.in  b13.ans  b13.in  b14.ans  b14.in  b15.ans  b15.in  b16.ans  b16.in  b17.ans  (+80 more)
124/: 4  4.cpp  p108  p108.cpp  p110.cpp  p112  p112.cpp  p115.cpp  p167  p167.cpp  p167_new  p167_new.cpp  p170  p170.cpp  p193  p193.cpp  p214.cpp  p230.cpp  p237  p237.cpp  p239  p239.cpp  p240  p240.cpp  p242.cpp  p248  p248.cpp  p252  p252.cpp  p253  p253.cpp  p255  p255.cpp  p256.cpp  p258  p258.cpp  p259  p259.cpp  p262  p262.cpp
124/p239.dSYM/Contents/: Info.plist
124/p262.dSYM/Contents/: Info.plist
2018XUZHOU/: A.cpp  M  M.cpp
A/: A  A.cpp  A.in  a.out  asd
B/: B.cpp
H/: H  H.cpp
NOIP2016/: toy  toy.cpp
Q/: Q  Q.cpp  Q.in
Z/: Z  Z.cpp
bisai/: bus  bus.cpp  card  card.cpp  password
bisai/bubble/: bubble  bubble.cpp
bisai/dragons/: dragons  dragons.cpp
bisai/f/: f  f.cpp
bisai/gcd/: gcd  gcd.cpp
bisai/rebuild/: rebuild  rebuild.cpp
bisai/rect/: rect  rect.cpp
bisai/substring/: substring
calendar/: calendar  calendar.cpp
certif/: certif.cpp
cf/2018SHENYANG/: J  J.cpp
cf/2018南京/: A  A.cpp
contests/: light.cpp
contests/2019bluebridge/01/: answer.cpp  domjudge-problem.ini  gendata.py  genddddd.cpp  problem.yaml  run.py
contests/2019bluebridge/dfs/: answer.cpp  domjudge-problem.ini  gendata.py  problem.yaml
contests/2019bluebridge/taowa/: answer.cpp  domjudge-problem.ini  problem.yaml  run.py
contests/2019bluebridge/tree/: answer.cpp  gendata.py
contests/2020acm/aabb/: ans.cpp
contests/2020acm/ddimension/: answer.cpp  gendata.py
contests/2020acm/mst/: gendata.py  kruskal.cpp  (+1 more)
contests/2020ccpc/: 1003.cpp  1010.cpp  1011.cpp
contests/2020ieee/: A.cpp  hotel.cpp  linerly.cpp  nisauc.cpp  tangram.cpp  wooden.cpp
contests/hashcode2020/: baoli.py  random.cpp  stt.cpp  tl.cpp
contests/lqmn/: 5.cpp  9.cpp
lg/: 1010  1010.cpp  1019  1019.cpp  1031  1031.cpp  1040  1040.cpp  1042  1042.cpp  1048  1048.cpp  1051  1051.cpp  1059  1059.cpp  1060  1060.cpp  1068  1068.cpp  1071  1071.cpp  1088.cpp  1090  1090.cpp  1093  1093.cpp  1098  1098.cpp  1101.cpp  1164  1164.cpp  1181  1181.cpp  1192  1192.cpp  1223  1223.cpp  1259  1259.cpp  (+12 more)
lg/lg/: 1538.cpp
lyx/a/: a  a.cpp  b  b.cpp
lyx/b/: b  b.cpp
lyx/bowling/: bowling  bowling.cpp
lyx/bracket/: bracket.cpp
lyx/brazil/: brazil  brazil.cpp
lyx/candy/: candy  candy.cpp
lyx/china/: china  china.cpp
lyx/encrypt/: encrypt  encrypt.cpp
lyx/england/: england  england.cpp
lyx/f/: f.cpp
lyx/g/: g.cpp
lyx/h/: h.cpp
lyx/hanoi/: hanoi  hanoi.cpp
lyx/k2O7/: k2O7  k2O7.cpp
lyx/mai/: mai  mai.cpp
lyx/poffice/: poffice  poffice.cpp
lyx/sqrt/: sqrt  sqrt.cpp
lyx/tree/: tree  tree.cpp
map/: bfs.cpp
mooo/: spfa  spfa.cpp  线段树  线段树.cpp  邻接表  邻接表.cpp  高精度  高精度.cpp
oldbisai/: card
oldbisai/icpc2019/: L  L.cpp
senior/124/: 4.cpp  p110  p112.cpp  p167  p167_new.cpp  p230  p237  p237.cpp  p239.cpp  p242  p248.cpp  p256  p258  p259  p259.cpp  p260  p260.cpp
senior/JSK/: htyx  htyx.cpp
senior/Log/: 2017-10-29.md
senior/mooo/: segment_tree.cpp  spfa.cpp  并查集.cpp  线段树  高精度
senior/oldbisai/: bus  card.cpp  password.cpp
zy/: 2.1  2.1.cpp  2.2  2.2.cpp  2.3  2.3.cpp  2.4.cpp
(+224 files in other folders)
