cmake_minimum_required(VERSION 3.15)
project(oi)

set(CMAKE_CXX_STANDARD 14)

add_executable(taowa contests/2019bluebridge/taowa/answer.cpp)
add_executable(temp temp.cpp)
add_executable(tempc temp.c)
add_executable(dfs contests/2019bluebridge/dfs/answer.cpp)

add_executable(temp1 temp1.cpp)

add_executable(A A.cpp)
add_executable(genddddd contests/2019bluebridge/01/genddddd.cpp)
add_executable(F F.cpp)
add_executable(I contests/2019bluebridge/tree/answer.cpp)
add_executable(1877 lg/1877.cpp)
add_executable(tl contests/hashcode2020/tl.cpp)
add_executable(random contests/hashcode2020/random.cpp)