cmake_minimum_required(VERSION 3.15)
project(oi)

set(CMAKE_CXX_STANDARD 14)

add_executable(taowa contests/2019bluebridge/taowa/answer.cpp)
add_executable(temp temp.cpp)
add_executable(tempc temp.c)
add_executable(dfs contests/2019bluebridge/dfs/answer.cpp)

add_executable(temp1 temp1.cpp)

add_executable(A contests/2020ieee/A.cpp)
add_executable(genddddd contests/2019bluebridge/01/genddddd.cpp)
add_executable(F F.cpp)
add_executable(I contests/2019bluebridge/tree/answer.cpp)
add_executable(1877 lg/1877.cpp)
add_executable(tl contests/hashcode2020/tl.cpp)
add_executable(random contests/hashcode2020/random.cpp)
add_executable(huoche huoche.c)
add_executable(neicundizhi neicundizhi.c)
add_executable(kruskal contests/2020acm/mst/kruskal.cpp)
add_executable(ans contests/2020acm/aabb/ans.cpp)
add_executable(answer contests/2020acm/ddimension/answer.cpp)
add_executable(a contests/2020ccpc/1/a.cpp)
add_executable(i contests/2020ccpc/1/i.cpp)
add_executable(g contests/2020ccpc/2/g.cpp)
add_executable(1010 contests/2020ccpc/1010.cpp)
add_executable(1005 contests/2020ccpc/1005.cpp)
add_executable(1003 contests/2020ccpc/1003.cpp)
add_executable(1011 contests/2020ccpc/1011.cpp)
add_executable(102700B contests/2020ieee/预选/102700B.cpp)
add_executable(102700D contests/2020ieee/预选/102700D.cpp)
add_executable(1027000E contests/2020ieee/预选/1027000E.cpp)
add_executable(B contests/2020ieee/预选/B.cpp)

add_executable(nisauc contests/2020ieee/nisauc.cpp)
add_executable(linerly contests/2020ieee/linerly.cpp)
add_executable(hotel contests/2020ieee/hotel.cpp)
add_executable(tangram contests/2020ieee/tangram.cpp)
add_executable(wooden contests/2020ieee/wooden.cpp)
add_executable(light contests/light.cpp)
add_executable(magical_stones contests/2020ieee/magical_stones.cpp)